# context-

./: .gitignore  BENCHMARKS.md  CONTRIBUTING.md  LICENSE  README.md  STATUS.md  agentcontext-v0.1-spec-and-readme.md  pyproject.toml
.github/workflows/: ci.yml
benchmarks/: harness.py  make_corpus.py
benchmarks/corpus/: api-docs.html  hr-handbook.docx  meeting-notes.txt  news-article.html  product-deck.pptx  quarterly-report.md  refund-policy.md  sales-summary.xlsx
benchmarks/corpus/golden/: api-docs.json  hr-handbook.json  invoice.json  meeting-notes.json  news-article.json  product-deck.json  quarterly-report.json  refund-policy.json  sales-summary.json
src/agentcontext/: __init__.py  api.py  cli.py
src/agentcontext/core/: model.py  registry.py
src/agentcontext/parsers/: __init__.py  base.py  data.py  docx.py  html.py  office.py  pdf.py  text.py
src/agentcontext/understanding/: __init__.py  summarize.py
tests/: test_office.py  test_phase1.py  test_udm.py
