[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentcontext"
version = "0.1.0"
description = "Document parsing that never loses provenance: every block of output knows its source page, section, and location."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "AgentContext" }]
keywords = ["document-parsing", "provenance", "citations", "pdf", "docx", "markdown", "rag", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

# Core has ZERO hard dependencies: txt/md/html parsing is pure stdlib.
# No torch, no CUDA, no API keys — pure parsing (spec rule).
dependencies = []

[project.optional-dependencies]
pdf = ["pypdf>=4.0"]
docx = ["python-docx>=1.1"]
all = ["pypdf>=4.0", "python-docx>=1.1"]
dev = ["pytest>=8.0", "ruff>=0.5"]

[project.scripts]
agentcontext = "agentcontext.cli:main"

[project.urls]
Homepage = "https://github.com/aanseaa/agentcontext"

[tool.hatch.build.targets.wheel]
packages = ["src/agentcontext"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
